// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-view/components/ColumnButton render should render ColumnButton default state 1`] = `
<Flyout
  className="query-bar-column-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-right"
>
  <Button
    className="query-bar-button"
    isDisabled={true}
    onClick={[Function]}
    type="button"
  >
    <MenuToggle>
      <IconMetadataColumns />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Columns"
          id="boxui.metadataView.columnsButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <div
      className="column-button-dropdown"
    >
      <div
        className="column-button-dropdown-header"
      >
        <DraggableList
          className="draggable-list-example"
          listId="1"
          onDragEnd={[Function]}
        >
          <PortaledDraggableListItem
            id="item_28"
            index={1}
            isDraggableViaHandle={true}
            key="1"
          >
            <Checkbox
              isChecked={true}
              label="Vendor Name"
              name="Vendor Name"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_26"
            index={2}
            isDraggableViaHandle={true}
            key="2"
          >
            <Checkbox
              isChecked={true}
              label="Updated"
              name="Updated"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_29"
            index={3}
            isDraggableViaHandle={true}
            key="3"
          >
            <Checkbox
              isChecked={true}
              label="Contract Value"
              name="Contract Value"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_30"
            index={4}
            isDraggableViaHandle={true}
            key="4"
          >
            <Checkbox
              isChecked={true}
              label="Expiration Month"
              name="Expiration Month"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_31"
            index={5}
            isDraggableViaHandle={true}
            key="5"
          >
            <Checkbox
              isChecked={true}
              label="Country"
              name="Country"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_32"
            index={6}
            isDraggableViaHandle={true}
            key="6"
          >
            <Checkbox
              isChecked={true}
              label="State"
              name="State"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_33"
            index={7}
            isDraggableViaHandle={true}
            key="7"
          >
            <Checkbox
              isChecked={true}
              label="Function"
              name="Function"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
        </DraggableList>
      </div>
      <div
        className="column-button-dropdown-footer"
      >
        <PrimaryButton
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Apply"
            id="boxui.metadataView.applyFiltersButtonText"
          />
        </PrimaryButton>
      </div>
    </div>
  </Overlay>
</Flyout>
`;

exports[`features/metadata-view/components/ColumnButton render should render ColumnButton with template passed in 1`] = `
<Flyout
  className="query-bar-column-dropdown-flyout"
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-right"
>
  <Button
    className="query-bar-button"
    isDisabled={false}
    onClick={[Function]}
    type="button"
  >
    <MenuToggle>
      <IconMetadataColumns />
      <span
        className="button-label"
      >
        <FormattedMessage
          defaultMessage="Columns"
          id="boxui.metadataView.columnsButtonText"
        />
      </span>
    </MenuToggle>
  </Button>
  <Overlay>
    <div
      className="column-button-dropdown"
    >
      <div
        className="column-button-dropdown-header"
      >
        <DraggableList
          className="draggable-list-example"
          listId="2"
          onDragEnd={[Function]}
        >
          <PortaledDraggableListItem
            id="item_28"
            index={1}
            isDraggableViaHandle={true}
            key="1"
          >
            <Checkbox
              isChecked={true}
              label="Vendor Name"
              name="Vendor Name"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_26"
            index={2}
            isDraggableViaHandle={true}
            key="2"
          >
            <Checkbox
              isChecked={true}
              label="Updated"
              name="Updated"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_29"
            index={3}
            isDraggableViaHandle={true}
            key="3"
          >
            <Checkbox
              isChecked={true}
              label="Contract Value"
              name="Contract Value"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_30"
            index={4}
            isDraggableViaHandle={true}
            key="4"
          >
            <Checkbox
              isChecked={true}
              label="Expiration Month"
              name="Expiration Month"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_31"
            index={5}
            isDraggableViaHandle={true}
            key="5"
          >
            <Checkbox
              isChecked={true}
              label="Country"
              name="Country"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_32"
            index={6}
            isDraggableViaHandle={true}
            key="6"
          >
            <Checkbox
              isChecked={true}
              label="State"
              name="State"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
          <PortaledDraggableListItem
            id="item_33"
            index={7}
            isDraggableViaHandle={true}
            key="7"
          >
            <Checkbox
              isChecked={true}
              label="Function"
              name="Function"
              onChange={[Function]}
            />
          </PortaledDraggableListItem>
        </DraggableList>
      </div>
      <div
        className="column-button-dropdown-footer"
      >
        <PrimaryButton
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Apply"
            id="boxui.metadataView.applyFiltersButtonText"
          />
        </PrimaryButton>
      </div>
    </div>
  </Overlay>
</Flyout>
`;
